@@ -1,5 +1,6 @@
 package com.tagme.tagme_store_back.persistence.dao.jpa.impl;
 
+import com.tagme.tagme_store_back.domain.exception.ResourceNotFoundException;
 import com.tagme.tagme_store_back.domain.model.OrderStatus;
 import com.tagme.tagme_store_back.persistence.dao.jpa.OrderJpaDao;
 import com.tagme.tagme_store_back.persistence.dao.jpa.entity.OrderJpaEntity;
@@ -18,38 +19,70 @@ public class OrderJpaDaoImpl implements OrderJpaDao {
     @Override
     public List<OrderJpaEntity> findAll(int page, int size) {
         int pageIndex = Math.max(page - 1, 0);
+        int validSize = Math.max(size, 1);
 
         String sql = "SELECT o FROM OrderJpaEntity o ORDER BY o.id";
         TypedQuery<OrderJpaEntity> query = entityManager
                 .createQuery(sql, OrderJpaEntity.class)
-                .setFirstResult(pageIndex * size)
-                .setMaxResults(size);
+                .setFirstResult(pageIndex * validSize)
+                .setMaxResults(validSize);
 
         return query.getResultList();
     }
 
     @Override
     public Optional<OrderJpaEntity> findById(Long id) {
+        if (id == null) {
+            return Optional.empty();
+        }
         return Optional.ofNullable(entityManager.find(OrderJpaEntity.class, id));
     }
 
     @Override
     public OrderJpaEntity insert(OrderJpaEntity orderJpaEntity) {
+        if (orderJpaEntity == null) {
+            throw new IllegalArgumentException("Order entity cannot be null");
+        }
+        if (orderJpaEntity.getUser() == null) {
+            throw new IllegalArgumentException("Order must have a user");
+        }
+        if (orderJpaEntity.getOrderStatus() == null) {
+            throw new IllegalArgumentException("Order must have a status");
+        }
+
         entityManager.persist(orderJpaEntity);
         return orderJpaEntity;
     }
 
     @Override
     public OrderJpaEntity update(OrderJpaEntity orderJpaEntity) {
+        if (orderJpaEntity == null) {
+            throw new IllegalArgumentException("Order entity cannot be null");
+        }
+        if (orderJpaEntity.getId() == null) {
+            throw new IllegalArgumentException("Order ID cannot be null for update");
+        }
+
+        // Verificar que existe
+        OrderJpaEntity existing = entityManager.find(OrderJpaEntity.class, orderJpaEntity.getId());
+        if (existing == null) {
+            throw new ResourceNotFoundException("Order not found with id: " + orderJpaEntity.getId());
+        }
+
         return entityManager.merge(orderJpaEntity);
     }
 
     @Override
     public void deleteById(Long id) {
-        OrderJpaEntity entity = entityManager.find(OrderJpaEntity.class, id);
-        if (entity != null) {
-            entityManager.remove(entity);
+        if (id == null) {
+            throw new IllegalArgumentException("Order ID cannot be null");
         }
+
+        OrderJpaEntity entity = entityManager.find(OrderJpaEntity.class, id);
+        if (entity == null) {
+            throw new ResourceNotFoundException("Order not found with id: " + id);
+        }
+        entityManager.remove(entity);
     }
 
     @Override
@@ -60,6 +93,10 @@ public class OrderJpaDaoImpl implements OrderJpaDao {
 
     @Override
     public List<OrderJpaEntity> findByUserId(Long userId) {
+        if (userId == null) {
+            throw new IllegalArgumentException("User ID cannot be null");
+        }
+
         String sql = "SELECT o FROM OrderJpaEntity o WHERE o.user.id = :userId ORDER BY o.createdAt DESC";
         TypedQuery<OrderJpaEntity> query = entityManager
                 .createQuery(sql, OrderJpaEntity.class)
@@ -68,12 +105,12 @@ public class OrderJpaDaoImpl implements OrderJpaDao {
         return query.getResultList();
     }
 
-    /**
-     * Busca una orden activa (PENDING) por el ID del usuario
-     * @param userId ID del usuario
-     * @return Optional con la orden activa o vacío si no existe
-     */
+    @Override
     public Optional<OrderJpaEntity> findActiveOrderByUserId(Long userId) {
+        if (userId == null) {
+            return Optional.empty();
+        }
+
         String sql = "SELECT o FROM OrderJpaEntity o WHERE o.user.id = :userId AND o.orderStatus = :status";
         TypedQuery<OrderJpaEntity> query = entityManager
                 .createQuery(sql, OrderJpaEntity.class)
@@ -81,22 +118,22 @@ public class OrderJpaDaoImpl implements OrderJpaDao {
                 .setParameter("status", OrderStatus.PENDING);
 
         List<OrderJpaEntity> results = query.getResultList();
-        return results.isEmpty() ? Optional.empty() : Optional.of(results.get(0));
+        return results.isEmpty() ? Optional.empty() : Optional.of(results.getFirst());
     }
 
-    /**
-     * Obtiene el estado de una orden por su ID
-     * @param orderId ID de la orden
-     * @return Optional con el estado o vacío si no existe la orden
-     */
+    @Override
     public Optional<OrderStatus> getOrderStatus(Long orderId) {
+        if (orderId == null) {
+            return Optional.empty();
+        }
+
         String sql = "SELECT o.orderStatus FROM OrderJpaEntity o WHERE o.id = :orderId";
         TypedQuery<OrderStatus> query = entityManager
                 .createQuery(sql, OrderStatus.class)
                 .setParameter("orderId", orderId);
 
         List<OrderStatus> results = query.getResultList();
-        return results.isEmpty() ? Optional.empty() : Optional.of(results.get(0));
+        return results.isEmpty() ? Optional.empty() : Optional.of(results.getFirst());
     }
 }
 
